# fugitrs

./: Cargo.toml  README.md  pyproject.toml
auto_struct_method_macro/: Cargo.toml
auto_struct_method_macro/src/: lib.rs
src/: config.rs  lib.rs
src/config/: interface.rs  mod.rs  print.rs
src/git/: git_diff.rs  mod.rs
