[package]
name = "fugitrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fugitrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
git2 = "0.18.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
