[package]
name = "fugitrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fugitrs"
crate-type = ["cdylib"]

[dependencies]
bevy_reflect = "0.12.1"
git2 = "0.18.1"
pyo3 = "0.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
smart-default = "0.7.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
